mesh-factory/gitlab/gitlab.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: default
  labels:
    app: gitlab
    service: gitlab
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
  - name: ssh
    port: 22
    targetPort: 22      
  selector:
    app: gitlab
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitlab
      version: v1
  template:
    metadata:
      labels:
        app: gitlab
        version: v1
    spec:
      serviceAccountName: gitlab
      containers:
      - image: gitlab/gitlab-ce
        imagePullPolicy: IfNotPresent
        name: gitlab
        ports:
        - containerPort: 80
        - containerPort: 443
        - containerPort: 22
