mesh-factory/gitlab/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: git-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "git.example.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
  namespace: default 
spec:
  hosts:
  - "git.example.com"
  gateways:
  - git-gateway
  http:
  - route:
    - destination:
        host: gitlab
        port:
          number: 80
